...
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/page_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <!-- Event Name Field -->
            <EditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_input_field_shape"
                android:hint="Event Name"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/blueGrey"
                android:textSize="16sp" />
            <!-- Location Field -->
            <Spinner
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_input_field_shape"
                android:hint="Location"
                android:paddingHorizontal="15dp"
...
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:background="@drawable/text_input_field_shape">
                <EditText
                    android:id="@+id/choose_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:hint="Choose Date"
                    android:inputType="date"
...
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:background="@drawable/text_input_field_shape">
                <EditText
                    android:id="@+id/choose_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:hint="Choose Time"
                    android:paddingStart="15dp"
...
                    android:padding="16dp"
                    tools:srcCompat="@drawable/clock_icon" />
            </LinearLayout>

            <!-- Waiting List Capacity Field -->
            <EditText
                android:id="@+id/waiting_list_capacity"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_input_field_shape"
                android:hint="Event Capacity (Optional)"
                android:paddingHorizontal="15dp"
...
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:background="@drawable/text_input_field_shape">
                <EditText
                    android:id="@+id/registration_until"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:clickable="true"
                    android:hint="Open for registration until"
...
                    android:src="@drawable/calendar_icon"
                    android:contentDescription="Calendar Icon" />
            </LinearLayout>

            <!-- Attendee Sample Number Field -->
            <EditText
                android:id="@+id/attendee_sample_num"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_input_field_shape"
                android:hint="Number of Attendees to Sample"
                android:paddingHorizontal="15dp"
...
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Next Button -->
        <Button
            android:id="@+id/next_button"
            android:layout_width="170dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/lightBrown"
            android:paddingHorizontal="40dp"
            android:paddingVertical="15dp"
...
