<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/landing_page"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".views.StartUp">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:columnCount="1"
            android:rowCount="5"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slogan">

            <Button
                android:id="@+id/AttendeeSignInButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center"
                android:backgroundTint="@color/lightBrown"
                android:paddingHorizontal="40dp"
                android:paddingVertical="15dp"
                android:text="Continue as Attendee"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/OrganizerSignInButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/lightBrown"
                android:paddingHorizontal="40dp"
                android:paddingVertical="15dp"
                android:text="Continue as Organizer"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/AdminSignInButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/lightBrown"
                android:paddingHorizontal="40dp"
                android:paddingVertical="15dp"
                android:text="Continue as Admin"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </GridLayout>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="Espresso"
            android:textAlignment="center"
            android:textColor="@color/darkBrown"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="145dp"
            android:layout_height="131dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/espresso_app_logo_transparent_background_cmput_301" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="Your ticket to fair event access."
            android:textAlignment="center"
            android:textColor="@color/lightBrown"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/terms_policy"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
