<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Admin Profile Page -->
    <TextView
        android:id="@+id/admin_dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="Profile"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled"
        app:itemTextColor="@color/black"
        android:background="@color/veryLightBrown" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <!-- Admin profile details -->
    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="116dp"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="136dp"
        android:text="Name"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="218dp"
        android:text="Email"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="356dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="305dp"
        android:text="Sign out"
        android:textColorLink="#00B0FD"
        android:backgroundTint="@color/lightBrown"/>

    <ImageButton
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:srcCompat="@drawable/settings" />

</RelativeLayout>